sample/TypeError/t04.txt
Traceback (most recent call last):
  File "/home/sano_anju/errlocator/sample/TypeError/t04.py", line 11, in <module>
    num = math.comb(5, a)
          ^^^^^^^^^^^^^^^
TypeError: 'float' object cannot be interpreted as an integer